[workspace]


## Here, we specify that all subdirectories in the kernel/ and applications/ directories should be built, 
## except for those starting with a "." So, we build all kernel and application crates except hidden directories.
members = [
	"kernel/[!.]*/",
	"applications/[!.]*/",
]



exclude = [
	## exclude the build directories
	"build",
	"cfg",
	"compiler_plugins",
	"libs",
	"old_crates",
	"scripts",
	"target",
	"tools",
	"userspace",

	## Exclude *all* ports for now, as only the ones requested by core Theseus crates
	## should be included in the workspace build by default.
	"ports",

	## exclude tlibc, since we currently build it separately.
	"tlibc",

	## exclude unused test applications by default
	# "applications/test_channel",
	"applications/test_exception",
	"applications/test_exception2",
	"applications/test_filerw",
	"applications/heap_eval",
	"applications/test_mutex_sleep",
	"applications/test_wait_queue",
	# "applications/test_panic",
	# "applications/unwind_test",
	"applications/test_ixgbe",
	"libtheseus",
]

[patch.'https://github.com/rafalh/rust-fatfs']
### Temporary patch for fatfs which allows us to set the logging level.
### Once the below PR lands, we can remove this.
### <https://github.com/rafalh/rust-fatfs/pull/44>
fatfs = { git = "https://github.com/theseus-os/rust-fatfs", branch = "config_log_features" }

[patch.crates-io]
### Patch `spin` to use the `pause` asm instruction in busy-wait loops,
### because the `core::hint::spin_loop()` only uses it if "sse2" is enabled.
spin = { git = "https://github.com/theseus-os/spin-rs" }
### use our own version of volatile which supports zerocopy
volatile = { git = "https://github.com/theseus-os/volatile" }
### use our own no_std-compatilbe getopts
getopts = { git = "https://github.com/theseus-os/getopts" }
### use our own no_std-compatible qp trie
qp-trie = { git = "https://github.com/theseus-os/qp-trie-rs" }
### use the latest version of smoltcp from github; the one on crates.io is out of date
smoltcp = { git = "https://github.com/m-labs/smoltcp" }

### Patch `libc` so we can use libc-specific types when using `cfg(target-os = "theseus")`.
libc = { path = "ports/libc" }


### These profiles fix the new rustc behavior of splitting one crate into many object files. 
### That messes up our module loading, which is bad!
### See this link about profiles: https://doc.rust-lang.org/cargo/reference/manifest.html
# workaround rust-lang/rust#47074
[profile.dev]
codegen-units = 1
incremental = false

# workaround rust-lang/rust#47074
[profile.release]
codegen-units = 1
incremental = false

