[workspace]


## The members element is required, but we really only *need* the nano_core.
## Other crates will be built as needed, if they are actually used.
members = [
	"nano_core",
]

exclude = [
	"doc",
]



### These profiles fix the new rustc behavior of splitting one crate into many object files. 
### That messes up our module loading, which is bad!
### See this link about profiles: https://doc.rust-lang.org/cargo/reference/manifest.html
# workaround rust-lang/rust#47074
[profile.dev]
codegen-units = 1
incremental = false

# workaround rust-lang/rust#47074
[profile.release]
codegen-units = 1
incremental = false
