[workspace]


# ## The members element is required, but we really only *need* the nano_core.
# ## Other crates will be built as needed, if they are actually used.
# members = [
# 	"nano_core",
# ]

## Here, we specify that all subdirectories should be built, except for those starting with a "."
## So, we build everything except hidden directories.
members = [
	"[!.]*/"
]



exclude = [
	## exclude the build directories
	"target",
	"build",

	## dunno what this is, but it doesn't compile! @Wenqiu?
	"graph_drawer",
]



### These profiles fix the new rustc behavior of splitting one crate into many object files. 
### That messes up our module loading, which is bad!
### See this link about profiles: https://doc.rust-lang.org/cargo/reference/manifest.html
# workaround rust-lang/rust#47074
[profile.dev]
codegen-units = 1
incremental = false

# workaround rust-lang/rust#47074
[profile.release]
codegen-units = 1
incremental = false
