[package]
name = "libtheseus"
version = "0.1.0"
edition = "2021"
description = "The application-facing 'library' that exposes Theseus OS features, similar to a standard library."
authors = ["Kevin Boos <kevinaboos@gmail.com>", "Klim Tsoutsman <klim@tsoutsman.com>"]

[dependencies]
# fs
fs_node = { path = "../kernel/fs_node" }
io = { path = "../kernel/io" }
spin = "0.9.0"

# mem
heap = { path = "../kernel/heap" }

# sync
raw_sync = { path = "../kernel/raw_sync" }

# time
