[package]
name = "libtheseus"
version = "0.1.0"
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
description = "The application-facing 'library' that exposes Theseus OS features, similar to a standard library"
edition = "2021"

[dependencies]
app_io = { path = "../kernel/app_io" }
core2 = { version = "0.4.0", default-features = false, features = ["alloc", "nightly"] }
heap = { path = "../kernel/heap" }
panic_entry = { path = "../kernel/panic_entry", default-features = false }

[features]
default = ["std-handlers"]
std-handlers = ["panic_entry/std-handlers"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
incremental = false

[patch.crates-io]
# Patch `spin` to use the `pause` asm instruction in busy-wait loops, because
# the `core::hint::spin_loop()` only uses it if "sse2" is enabled.
spin = { git = "https://github.com/theseus-os/spin-rs" }
# Use our own version of volatile which supports zerocopy
volatile = { git = "https://github.com/theseus-os/volatile" }
# Use our own no_std-compatilbe getopts
getopts = { git = "https://github.com/theseus-os/getopts" }
# Use the latest version of smoltcp from github; the one on crates.io is out
# of date
smoltcp = { git = "https://github.com/m-labs/smoltcp" }
# Patch `libc` so we can use libc-specific types when using `cfg(target_os
# = "theseus")`.
libc = { git = "https://github.com/theseus-os/libc", branch = "theseus" }
# Patch `core2` with newer functions from `std::io`, e.g., additional `Seek`
# trait functions
core2 = { path = "../libs/core2" }
# Patch `bincode` because the version on crates.io doesn't handle no_std
# features correctly.
bincode = { git = "https://github.com/bincode-org/bincode" }

