[package]
name = "theseus-shim"
version = "0.1.0"
edition = "2021"

[dependencies]
alloc = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-alloc' }
core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }
theseus_ffi = { path = "../libs/theseus_ffi" }

[features]
rustc-dep-of-std = ['alloc', 'core', 'theseus_ffi/rustc-dep-of-std']
