[package]
name = "test_libtheseus"
version = "0.1.0"
description = "A test app for libtheseus"
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
# build = "../../build.rs"

[dependencies.libtheseus]
path = "../libtheseus"

[[bin]]
name = "test_libtheseus"
path = "src/lib.rs"

[lib]
crate-type = ["rlib", "staticlib"]


[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
incremental = false
