[package]
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
name = "tlibc"
description = "A libc implementation for Theseus."
version = "0.1.0"
build = "../build.rs"

[dependencies]
spin = "0.9.0"
log = "0.4.8"
libc = { version = "0.2.107", default-features = false }
cstr_core = "0.2.3"
core2 = { version = "0.3.2", default-features = false, features = ["alloc", "nightly"] }
memchr = { version = "2.2.0", default-features = false }
cbitset = "0.2.0"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.2.0"

[dependencies.memory]
path = "../kernel/memory"

[dependencies.task]
path = "../kernel/task"


[lib]
crate-type = ["lib"]


### Patch section was copied from the top-level Theseus Cargo.toml
[patch.crates-io]
### Patch `spin` to use the `pause` asm instruction in busy-wait loops,
### because the `core::hint::spin_loop()` only uses it if "sse2" is enabled.
spin = { git = "https://github.com/theseus-os/spin-rs" }
### use our own version of volatile which supports zerocopy
volatile = { git = "https://github.com/theseus-os/volatile" }
### use our own no_std-compatilbe getopts
getopts = { git = "https://github.com/theseus-os/getopts" }
### use our own no_std-compatible qp trie
qp-trie = { git = "https://github.com/theseus-os/qp-trie-rs" }
### use the latest version of smoltcp from github; the one on crates.io is out of date
smoltcp = { git = "https://github.com/m-labs/smoltcp" }
