[package]
name = "hello"
version = "0.1.0"
authors = ["Kevin Boos <kevinaboos@gmail.com>"]

[dependencies]
rlibc = "1.0.0"


[dependencies.log]
default-features = false
version = "0.3.7"


[dependencies.print]
path = "../../kernel/print"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
